--- a/style.css
+++ b/style.css
@@ -1,44 +1,94 @@
 /* Color variables */
-$white: #ffffff;
-$dark-gray: #333333;
-$light-gray: #f3f3f3;
-$base-color: ;
+:root {
+    --white: #ffffff;
+    --dark-gray: #0d0d0d;
+    --peach: #ef9273;
+    --light-peach: #fef9f8;
+}
 
 /* Mixin */
 @mixin transition {
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
-@mixin corners ($radius) {
-    -moz-border-radius: $radius;
-    -webkit-border-radius: $radius;
-    border-radius: $radius;
-    -khtml-border-radius: $radius;
+@mixin corners($radius) {
+  -moz-border-radius: $radius;
+  -webkit-border-radius: $radius;
+  border-radius: $radius;
+  -khtml-border-radius: $radius;
 }
 
 /* Body */
 body {
-    background-color:;
-    font-family: Helvetica, Arial, sans-serif;
-    height: 100%;
+  background-color: var(--light-peach);
+  font-family: "Verdana", sans-serif;
+  height: 100%;
 }
 
 .wrapper {
-    width: 800px;
-    margin: 39px auto;
-    color: $white;
-    text-align: center;
+  width: 800px;
+  margin: auto;
+  color: var(--dark-gray);
+  text-align: center;
 }
 
-h1, h2, h3 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    font-size: 2.6em;
-    text-transform: uppercase;
+h1 {
+  font-family: "Georgia", sans-serif;
+  font-weight: 600;
+  font-size: 2.6em;
+  text-transform: uppercase;
+  margin: 60px 0px;
 }
 
-#seconds, #tens {
+.wrapper .timer-section{
+    margin-bottom: 60px;
+    font-family: 'Courier New';
     font-size: 2em;
+}
+
+#seconds,
+#tens {
+  font-size: 2em;
+}
+
+.wrapper button {
+  background: var(--light-peach);
+  color: var(--dark-gray);
+  border: solid 1px var(--peach);
+  border-radius: 5px; 
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  padding: 18px 10px;
+  width: 180px;
+  margin: 10px;
+  outline: none;
+}
+
+.wrapper button:hover {
+    background: var(--peach);
+    border: solid 1px var(--peach);
+    color: var(--white);
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.12s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
+.footer {
+    margin-top: 50px;
+    font-size: 0.8em;
+}
+
+.footer span a {
+    color: var(--peach);
+    text-decoration: none;
+}
+
+.footer span a:hover {
+    text-decoration: underline;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
